# hnhm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  book.toml  index.html  pydoc-markdown.yaml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  lint.yaml  pull_request.yaml  release.yaml  tests.yaml
docs/: README.md  SUMMARY.md  index.md
docs/assets/: color_scheme.css
docs/guide/: ingest_raw.md  intro.md  setup_postgres.md  setup_python.md
docs/tutorial/: init-hnhm.md  raw-data.md  setup.md
dwh/: __hnhm__.py  __init__.py  amazon_stage.py  docker-compose.yml  etl__raw.py  etl__stage.py  flow__listing.py  flows.py  review.py  user.py  user_review.py
hnhm/: __init__.py  cli.py  file_state.py  file_storage.py  flow.py  hnhm.py  hnhm_attribute.py  hnhm_entity.py  hnhm_link.py  hnhm_registry.py  plan_printer.py
hnhm/core/: __init__.py  attribute.py  entity.py  error.py  group.py  layout.py  link.py  migration.py  migrations.py  mutations.py  priority.py  sql.py  state.py  storage.py  task.py  tasks.py
hnhm/postgres/: sql.py
hnhm/postgres/sql_templates/: __init__.py  create_attribute.py  create_attribute.sql  create_group.py  create_group.sql  create_hub.py  create_hub.sql  create_link.py  create_link.sql  create_stage.py  create_stage.sql  load_hub.py  load_hub.sql  load_ignore.py  load_ignore.sql  load_link.sql  load_new.py  load_new.sql  load_update.py  load_update.sql  update_entity_view.sql
search/: search_index.json
tests/: __hnhm__.py  conftest.py  dwh.py  test_apply_entity.py  test_apply_link.py  test_cli.py  test_entity_apply.py  test_entity_plan.py  test_entity_view.py  test_file_storage.py  test_flow.py  test_link.py  test_load_attribute.py  test_load_group.py  test_load_hub.py  test_load_link.py  test_plan_entity.py  test_plan_link.py  test_plan_printer.py  test_registry.py  test_sql.py  test_stage.py  test_storage_data_checkers.py  test_types.py  test_view.py  util.py
tutorial/: __hnhm__.py  docker-compose.yml  etl__raw.py  etl__stage.py  flow__listing.py  hnhm__listing.py  requirements.txt  stage__listing.py
tutorial/init-hnhm/: index.html
tutorial/intro/: index.html
tutorial/raw-data/: index.html
tutorial/setup/: index.html
