[tool.poetry]
name = "hnhm"
version = "0.0.9"
readme = "README.md"
description = "hNhM – highly Normalized hybrid Model."
keywords = ["hnhm", "datavault", "anchormodeling", "python"]
homepage = "https://marchinho11.github.io/hnhm"
repository = "https://github.com/marchinho11/hnhm"
documentation = "https://marchinho11.github.io/hnhm"
authors = ["Arseny Egorov <egoroff-ars@yandex.ru>"]
maintainers = ["Arseny Egorov <egoroff-ars@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.1.1"
click = "8.1.6"
Jinja2 = "3.1.2"
psycopg2-binary = "2.9.7"

[tool.poetry.group.dev.dependencies]
pydoc-markdown = "4.8.2"
pre-commit = "3.3.3"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pygount = "1.6.0"
pytest-env = "0.8.2"
mkdocs = "1.4.3"
mkdocs-material = "9.1.17"

[tool.poetry.scripts]
hnhm = "hnhm.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
length_sort = true
force_sort_within_sections = true
