[tool.poetry]
name = "hnhm"
version = "0.0.9"
readme = "README.md"
description = "hNhM – highly Normalized hybrid Model."
keywords = ["hnhm", "datavault", "anchormodeling", "python"]
homepage = "https://marchinho11.github.io/hnhm"
repository = "https://github.com/marchinho11/hnhm"
documentation = "https://marchinho11.github.io/hnhm"
authors = ["Arseny Egorov <egoroff-ars@yandex.ru>"]
maintainers = ["Arseny Egorov <egoroff-ars@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.4.2"
click = "8.1.7"
Jinja2 = "3.1.2"
psycopg2-binary = "2.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pygount = "1.6.0"

[tool.poetry.scripts]
hnhm = "hnhm.cli:cli"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
length_sort = true
force_sort_within_sections = true

[tool.coverage.report]
exclude_lines = [
    "pass",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
    "def __hash__",
    "def __eq__"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
